# server_base

./: .gitignore  CMakeLists.txt  universe_vs2017.bat
cmake/: fetch_content.cmake  project.cmake
inc/app/: server_app.h
inc/bt/: bt_mgr.h
inc/config/: base_config.h
inc/define/: bt_def.h  conn_def.h  event_def.h  server_base_guid_def.h  server_base_shm_def.h  server_def.h  timer_def.h
inc/event/: server_event.h
inc/module/: server_component.h  server_module.h
inc/res_mgr/: global_res_mgr.h  res_mgr.h
src/app/: server_app.cpp  server_msg_handler.cpp
src/bt/: bt_mgr.cpp
src/config/: base_config.cpp
src/event/: server_event.cpp
src/lua/: embed_source.cpp  embed_source.h  read_res.lua
src/res_mgr/: global_res_mgr.cpp
src/script/: base_config.pkg  base_enum.pkg  bt.pkg  res_base.pkg  tolua_bt.cpp
